Styled the container so the properties panel on the right never overlaps. Also fixed incorrect paging symbol

--- a/voyent-process-demo/css/app.css
+++ b/voyent-process-demo/css/app.css
@@ -1,8 +1,7 @@
 #js-properties-panel {
   position: absolute;
-  top: 20px;
-  right: 20px;
-  min-width: 250px;
+  right: 5px;
+  width: 250px;
   z-index: 200;
   overflow: auto;
   border: solid 1px #CCC;
@@ -15,6 +14,12 @@
 #js-properties-panel > .djs-properties-panel {
   padding-bottom: 70px;
   min-height: 100%;
+}
+#js-properties-panel, .djs-palette {
+    top: 10px;
+}
+.djs-palette {
+    left: 5px;
 }
 @font-face {
   font-family: 'bpmn-js-pp';
